<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.StudentLoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center"
                android:layout_centerInParent="true"
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/extra_extra_large_padding"
                android:paddingRight="@dimen/extra_extra_large_padding"
                android:paddingBottom="@dimen/very_large_padding">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/layout_padding"
                    android:backgroundTint="@color/secondary_text"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:drawablePadding="@dimen/small_margin"
                    android:drawableTint="@color/login_color"
                    android:gravity="center_vertical"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:nextFocusForward="@id/password"
                    android:textSize="15sp"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textColor="@color/secondary_text"
                    android:textColorHint="@color/secondary_text" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="@dimen/layout_padding"
                    android:backgroundTint="@color/secondary_text"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="@dimen/small_margin"
                    android:drawableTint="@color/login_color"
                    android:gravity="center_vertical"
                    android:hint="@string/password"
                    android:imeOptions="actionGo"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:textColor="@color/secondary_text"
                    android:textColorHint="@color/secondary_text" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/extra_extra_large_padding"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:gravity="center"
                    android:textAllCaps="true"
                    fancy:fb_borderColor="@color/login_btn_color"
                    fancy:fb_borderWidth="1dp"
                    fancy:fb_defaultColor="@color/colorTransparent"
                    fancy:fb_focusColor="@color/login_btn_color"
                    fancy:fb_radius="@dimen/small_margin"
                    fancy:fb_text="@string/login"
                    fancy:fb_textColor="@color/login_btn_color" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:layout_above="@id/linear2"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/dont_have_an_account"
                    android:textColor="@color/primary_text" />

                <TextView
                    android:id="@+id/txtSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/signUp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/here"
                    android:textColor="@color/primary_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/are_you_a_consultancy"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/txtConsultancy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/here"
                    android:textColor="@color/primary_text"
                    android:textSize="12sp" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
