<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:paddingLeft="@dimen/extra_extra_large_padding"
            android:paddingTop="@dimen/layout_padding"
            android:paddingRight="@dimen/extra_extra_large_padding"
            android:paddingBottom="@dimen/very_large_padding">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@font/nunito_semibold"
                android:text="@string/signUp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24dp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/layout_padding"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="@dimen/small_margin"
                android:drawableTint="@color/login_color"
                android:gravity="center_vertical"
                android:hint="@string/full_name"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:nextFocusForward="@id/email"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/small_margin"
                android:drawableTint="@color/login_color"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/phone"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_smartphone"
                android:drawablePadding="@dimen/small_margin"
                android:drawableTint="@color/login_color"
                android:gravity="center_vertical"
                android:hint="@string/phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:nextFocusForward="@id/address"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_address"
                android:drawablePadding="@dimen/small_margin"
                android:drawableTint="@color/login_color"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:nextFocusForward="@id/gender"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_gender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:text="@string/gender"
                    android:textSize="13sp" />

                <Spinner
                    android:id="@+id/gender"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:textAlignment="textEnd"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#77111111" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:src="@drawable/ic_birthday"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/medium_padding"
                    android:padding="@dimen/small_margin"
                    android:textColor="@color/primary_text"
                    android:text="DOB"
                    />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusedByDefault="true">

                    <EditText
                        android:id="@+id/year"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:textColorHint="@color/primary_text"
                        android:focusable="true"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="Year"
                        android:inputType="number"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@id/month"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:focusable="true"
                    android:focusedByDefault="true">

                    <EditText
                        android:id="@+id/month"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:focusable="true"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="Month"
                        android:textColorHint="@color/primary_text"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:nextFocusForward="@id/day"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:focusable="true"
                    android:focusedByDefault="true">

                    <EditText
                        android:id="@+id/day"
                        android:layout_width="70dp"
                        android:layout_height="50dp"
                        android:focusable="true"
                        android:gravity="center"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="Day"
                        android:textColorHint="@color/primary_text"
                        android:imeOptions="actionGo"
                        android:inputType="number"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="14sp" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/small_margin"
                android:drawableTint="@color/login_color"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusForward="@id/rePassword"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="13sp" />


            <EditText
                android:id="@+id/rePassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="@dimen/small_margin"
                android:drawableTint="@color/login_color"
                android:gravity="center_vertical"
                android:hint="@string/repeat_password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textSize="13sp" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/extra_extra_large_padding"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:textAllCaps="true"
                fancy:fb_borderColor="@color/login_btn_color"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/colorTransparent"
                fancy:fb_focusColor="@color/login_btn_color"
                fancy:fb_radius="@dimen/small_margin"
                fancy:fb_text="@string/signUp"
                fancy:fb_textColor="@color/login_btn_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/primary_text"
                    android:textSize="14dp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:text="@string/here"
                    android:textColor="@color/primary_text"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
